--- a/Releases.html
+++ b/Releases.html
@@ -2,7 +2,24 @@
     <head>
         <title>Releases</title>
         <style>
-        
+            *{
+                box-sizing: border-box;
+            }
+            body{
+                color: #41a73d;
+                background: #101010;
+            }
+            ul{
+                list-style: none;
+            }
+            li{
+                margin: 0;
+                padding: 0;
+            }
+            h3{
+                font-size: 1.5em;
+                color: #1add3f;
+            }
         </style>
     </head>
     <body>
