--- a/Future Updates and Goals.html
+++ b/Future Updates and Goals.html
@@ -7,7 +7,7 @@
             }
             body{
                 color: #41a73d;
-                background: #101010;
+                background: rgba(16, 16, 16, 0.82);
             }
             ul{
                 list-style: none;
@@ -17,8 +17,25 @@
                 padding: 0;
             }
             h3{
-                font-size: 1.5em;
+                font-size: 2.5em;
+                font-stretch: auto;
                 color: #1add3f;
+                text-align: center;
+                margin-bottom: 2em;
+            }
+            h2{
+                font-size: 1.5em;
+                font-stretch: auto;
+                color: #1add3f;
+                text-align: center;
+                margin-bottom: 1em;
+            }
+            p{
+                font-size: 1.5em;
+                font-stretch: auto;
+                text-align: left;
+                margin-top: 1.5em;
+                margin-left: 2em;
             }
         </style>
     </head>
@@ -29,9 +46,11 @@
                     Project Poke Passion
                 </h3>
                 
-                <h3>
+                <h2>
+                    <u>
                     Future Updates and Goals
-                </h3>
+                    </u>
+                </h2>
                 
                 <p>
                     -Multiplayer.
